<resources>
    <string name="app_name">Kalkulator</string>
    <string name="app_name2">Calculator</string>
    <string name="simpleButton">Simple</string>
    <string name="advancedButton">Advanced</string>
    <string name="aboutButton">About</string>
    <string name="exitButton">Exit</string>
    <string name="appInfo">Aplikacja, która pozwala na wykonywanie prostych jak i skomplikowanych obliczeń matematycznych. Możemy wybrać kalkulator prosty oraz zaawansowany.</string>
    <string name="information">Informacje</string>
    <string name="userInfo">Maciej Bem</string>

    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>

    <string name="backspace">Bksp</string>
    <string name="clear">CE</string>
    <string name="AC">AC</string>
    <string name="plusMinus">+-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="equals">=</string>
    <string name="dot">.</string>

    <string name="editText">Input expression</string>

    <string name="powSquare">x^2</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="ln">ln</string>
    <string name="log">log10</string>
    <string name="sqrt">sqrt</string>
    <string name="powY">x^y</string>
    <string name="leftBracket">(</string>
    <string name="rightBracket">)</string>

</resources>